# atlas-counsel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  buyer-team-mcp.example.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/adr/: 0001-citation-span-id-contract.md  0002-synthetic-deterministic-corpus.md  0003-eval-first-regression-gate.md  0004-hybrid-retrieval-qdrant.md  0005-provider-abstraction-protocols.md  0006-langgraph-stategraph.md  0007-structured-output-verify.md  0008-bounded-gap-retrieval.md  0009-durable-checkpointing.md  0010-per-tenant-isolation.md  0011-mcp-integration-boundary.md  0012-auth-tenant-binding.md  0013-multi-tier-memory.md  0014-optional-hitl.md  0015-observability-otel.md  0016-aws-deployment-iac.md  0017-memory-write-gating.md  0018-injection-defense.md  0019-real-backends.md  0020-real-corpus-validation.md  0021-networked-state-store.md  README.md
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/atlas_counsel/: __init__.py  _tokenize.py  ablation.py  chunking.py  config.py  decompose.py  embeddings.py  ingest.py  pipeline.py  qdrant_store.py  rerank.py  retrieval.py  telemetry.py
src/atlas_counsel/agent/: __init__.py  __main__.py  graph.py  llm.py  nodes.py  schemas.py  shield.py  state.py
src/atlas_counsel/corpus/: __init__.py  __main__.py  generator.py  models.py  writer.py
src/atlas_counsel/eval/: __init__.py  __main__.py  adversarial.py  answerer.py  judge.py  memory_ab.py  meta_eval.py  metrics.py  report.py  runner.py
src/atlas_counsel/memory/: __init__.py  store.py
src/atlas_counsel/providers/: __init__.py  _json.py  bedrock.py  bge_m3.py  llm_judge.py  ollama.py  structured_llm.py  titan.py
src/atlas_counsel/service/: __init__.py  api.py  core.py  mcp_server.py  tenants.py
tests/: test_adversarial.py  test_agent.py  test_agent_llm.py  test_corpus.py  test_corpus_writer.py  test_eval.py  test_eval_extra.py  test_ingest.py  test_mcp_auth.py  test_memory.py  test_memory_poisoning.py  test_meta_eval.py  test_pipeline.py  test_providers_factory.py  test_qdrant_integration.py  test_qdrant_resilience.py  test_qdrant_store.py  test_real_backends.py  test_rerank_decompose.py  test_retrieval.py  test_retrieval_extra.py  test_service.py  test_service_extra.py  test_shield.py  test_smoke.py  test_structured_llm.py  test_telemetry.py  test_tenants.py  test_tokenize.py
