[project]
name = "atlas-counsel"
version = "0.1.0"
description = "Citation-grounded agentic RAG over a synthetic procurement corpus."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6", "langgraph>=1.0", "langgraph-checkpoint-sqlite>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
qdrant = ["qdrant-client>=1.12"]
langfuse = ["langfuse>=2.0"]
rerank = ["sentence-transformers>=3.0"]

[project.scripts]
atlas-corpus = "atlas_counsel.corpus.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_counsel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
